Wed Jul 31 22:52:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix typos in expected
	  value.
	  pubilc ->
	  public
	     ^^

Wed Jul 31 22:50:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  system literal in external ID system notation declaration.

Wed Jul 31 22:36:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_cmp): Extracted from rb_big_cmp.
	  (power_cache_get_power): Change n1 argument (number of digits) to
	  power_level which is just passed to power_cache_get_power0.
	  (big2str_karatsuba): Ditto.
	  (rb_big2str1): Calculate the initial power_level.

Wed Jul 31 22:04:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Fix a typo.
	  Extern  ID ->
	  ExternalID
	        ^^

Wed Jul 31 22:01:36 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Add tests that focus
	  public ID in external ID notation declaration.

Wed Jul 31 22:01:24 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* parse.y: fix build error with bison-3.0.

Wed Jul 31 21:58:53 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Split test patterns.

Wed Jul 31 21:42:33 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Group tests.

Wed Jul 31 21:37:51 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_mixin.rb (TestNotationDecl#test_name):
	  Move to ...
	* test/rexml/test_notationdecl_parsetest.rb
	  (TestNotationDecl#test_name): ... here.

Wed Jul 31 21:37:47 2013  Kouhei Sutou  <kou@cozmixng.org>

Wed Jul 31 21:31:49 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_notationdecl_parsetest.rb: Remove setup because it
	  doesn't share anything with other tests.

Wed Jul 31 21:24:55 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_attributes_mixin.rb: Remove a needless shebang.